examples/errors/components/component6/component.py
import asdf  # noqa: F401 import unused
